--- a/client/src/styles/_tchat.scss
+++ b/client/src/styles/_tchat.scss
@@ -1,9 +1,11 @@
 #tchat{
-    height: 60vh !important;
+    height: 50vh !important;
     overflow-y: scroll;
-    margin-top: 50px !important;
+    margin-top: 20px !important;
     margin-left: 20px !important;
+    margin-right: 20px !important;
     li{
         margin-top: 15px !important;
+        word-wrap: break-word;
     }
 }
