--- a/client/src/styles/_tchat.scss
+++ b/client/src/styles/_tchat.scss
@@ -1,11 +1,19 @@
-#tchat{
-    height: 40vh !important;
+#tchat {
+    height: 60vh !important;
     overflow-y: scroll;
-    margin-top: 20px !important;
-    margin-left: 20px !important;
-    margin-right: 20px !important;
-    li{
-        margin-top: 15px !important;
+    background-color: #5555559f;
+
+    li {
+        margin-top: 14px !important;
         word-wrap: break-word;
+        margin-left: 20px !important;
+        margin-right: 20px !important;
+    }
+}
+
+@media screen and (max-width:975px) {
+    #tchat{
+    border-radius: 0 0 10px 10px;
+    height: 40vh !important;
     }
 }
