Fix count fix style

--- a/client/src/styles/_tchat.scss
+++ b/client/src/styles/_tchat.scss
@@ -1,7 +1,7 @@
 #tchat {
     height: 60vh !important;
     overflow-y: scroll;
-
+    background: rgba(0, 0, 0, 0.425);
     li {
         margin-top: 14px !important;
         word-wrap: break-word;
