Add ErrorMessage in front

--- a/client/src/styles/_signup.scss
+++ b/client/src/styles/_signup.scss
@@ -8,7 +8,7 @@
         justify-content: space-around;
         height: 90%;
     }
-    input[type=email],input[type=password]{
+    input[type=email],input[type=password],input[type=text]{
         width: 80%;
     }
 input[type="checkbox"]{
