--- a/client/src/styles/_tchat.scss
+++ b/client/src/styles/_tchat.scss
@@ -1,3 +1,20 @@
+#Home{
+    height: 100%;
+    #loginComponent{
+        height: 60%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        form{
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            height: 50%;
+        }
+    }
+}
+
 #tchat {
     height: 60vh !important;
     overflow-y: scroll;
