--- a/client/src/styles/_general.scss
+++ b/client/src/styles/_general.scss
@@ -56,11 +56,12 @@ nav {
                 }
             }
 
-                h1{
+                #brandLogo{
                     position: absolute;
                     right: 20px !important;
-                    font-size: 1.4em;
-                    color: white;
+                    width: 50px;
+                    height: 50px;
+                    background: url('./images/icon-chat.png') center/cover;
                     &:hover{
                         cursor: pointer;
                     }
